# cheeky-companion

./: .gitmodules  CMakeLists.txt
clients/: CMakeLists.txt
clients/basic/: CMakeLists.txt
clients/basic/include/: packets.hpp
clients/basic/src/: main.cpp
include/: client.hpp  companion.hpp  shared.hpp
include/net/: handler.hpp  packets.hpp  server.hpp
src/: client.cpp  companion.cpp  draw.cpp  main.cpp
src/net/: handler.cpp  server.cpp
test/: CMakeLists.txt  server_test.cpp
